--- a/Report.html
+++ b/Report.html
@@ -313,7 +313,7 @@ dim(training)</code></pre>
 </div>
 <div id="model-ensemble" class="section level2">
 <h2>Model Ensemble</h2>
-<p>The predictors will be combined and another model will be fit using neural net.</p>
+<p>The predictors will be combined and another model will be fit using the generalized linear model.</p>
 <p>View the performance of the ensemble model.</p>
 <pre class="r"><code>confusionMatrix(combPred,testing$diagnosis)</code></pre>
 <pre><code>## Confusion Matrix and Statistics
